--- a/node_tennis/websocket-tennis/index.html
+++ b/node_tennis/websocket-tennis/index.html
@@ -4,7 +4,7 @@
     <!-- <link rel="stylesheet" href="css/app.css" /> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
     <!-- <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script> -->
-    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </head>
   <body>
